fixed opacity and contrast issues for ADA

--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -16,7 +16,7 @@
 }
 
 span {
-	color: #777;
+	color: #333;
 }
 
 h3 {
